# SQLite3MultipleCiphers

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  SECURITY.md  VERSIONMAPPING.md  _config.yml  build.bat  cipher_aes128cbc.md  cipher_aes256cbc.md  cipher_chacha20.md  cipher_legacy_mode.md  cipher_sds_rc4.md  cipher_sqlcipher.md  config.json  configure.ac  premake5.lua  readme.md  rekeyvacuum.sh  sqlite-versions.txt  sqlite3mc.pc.in  wx_config.lua
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/build-context/: action.yml
.github/actions/get-amalgamation/: action.yml
.github/actions/setup-fossil/: action.yml
.github/actions/setup-signing/: action.yml
.github/actions/signpath-sign/: action.yml
.github/workflows/: build-release.yml  build-reusable.yml  build.yml  ci4sqlite3mc.yml  codeql-analysis.yml  generate-amalgamation.yml  update-sqlite.yml
.signpath/artifact-configurations/: windows-binaries.xml
_layouts/: default.html
_sass/: tables.scss
_sass/color_schemes/: dark.scss  light.scss
_sass/custom/: custom.scss
_sass/support/: _variables.scss
autoconf/: Makefile.in  README.txt  sqlite3.1  sqlite3.rc  sqlite3mc.pc.in  sqlite3rc.h
autoconf/autosetup/: README.md  sqlite-config.tcl  sqlite-custom.tcl
conan/: config.yml
conan/all/: conandata.yml  conanfile.py
docs/architecture/: arch_overview.md  arch_patch.md  arch_vfs.md
docs/ciphers/: cipher_aegis.md  cipher_aes128cbc.md  cipher_aes256cbc.md  cipher_ascon.md  cipher_chacha20.md  cipher_dynamic.md  cipher_legacy_mode.md  cipher_overview.md  cipher_plaintext_header.md  cipher_sds_rc4.md  cipher_sqlcipher.md
docs/configuration/: config_capi.md  config_overview.md  config_sql.md  config_sql_functions.md  config_sql_pragmas.md  config_uri.md
docs/faq/: faq_overview.md
docs/installation/: install_overview.md
packaging/: readme-amalgamation.md.in  readme-amalgamation.template.md  readme.template.md  release-notes.md.in  sqlite3mc_version.h.in
packaging/android/: Android.mk
packaging/autoconf/: VERSION.in  sqlite3rc.h.in
packaging/wasm/: EXPORTED_FUNCTIONS.c-pp.patch  GNUmakefile.patch  sqlite3-api-glue.c-pp.js.patch
pthreads4w/tests/: runorder.mk
scripts/: amalgamate.py  build_context.py  patchshell.sh  patchsqlite3.sh  rekeyvacuum.sh  render_readme.py  shell3mc.c.json  sqlite3mc.c.json  sqlite3mc.h.json  update_autoconf.py  update_build_files.py  update_config.py  validate_config.py  verify_icu.ps1  verify_sha3.py
src/: aes_hardware.c  carray.c  chacha20poly1305.c  cipher_aegis.c  cipher_ascon.c  cipher_chacha20.c  cipher_common.c  cipher_common.h  cipher_config.c  cipher_config.h  cipher_sds_rc4.c  cipher_sqlcipher.c  cipher_wxaes128.c  cipher_wxaes256.c  codec_algos.c  codecext.c  compress.c  csv.c  extensionfunctions.c  fastpbkdf2.c  fastpbkdf2.h  fileio.c  md5.c  memory_secure.c  miniz.c  miniz.h  mystdint.h  regexp.c  rekeyvacuum.c  rijndael.c  rijndael.h  series.c  sha1.c  sha1.h  sha2.c  sha2.h  shathree.c  shell.c  sqlar.c  sqlite3.def  (+16 more)
src/aegis/: libaegis.c
src/aegis/aegis128l/: aegis128l.c  aegis128l_aesni.c  aegis128l_aesni.h  aegis128l_altivec.c  aegis128l_altivec.h  aegis128l_armcrypto.c  aegis128l_armcrypto.h  aegis128l_common.h  aegis128l_soft.c  aegis128l_soft.h  implementations.h
src/aegis/aegis128x2/: aegis128x2.c  aegis128x2_aesni.c  aegis128x2_aesni.h  aegis128x2_altivec.c  aegis128x2_altivec.h  aegis128x2_armcrypto.c  aegis128x2_armcrypto.h  aegis128x2_avx2.c  aegis128x2_avx2.h  aegis128x2_common.h  aegis128x2_soft.c  aegis128x2_soft.h  implementations.h
src/aegis/aegis128x4/: aegis128x4.c  aegis128x4_aesni.c  aegis128x4_aesni.h  aegis128x4_altivec.c  aegis128x4_altivec.h  aegis128x4_armcrypto.c  aegis128x4_armcrypto.h  aegis128x4_avx2.c  aegis128x4_avx2.h  aegis128x4_avx512.c  aegis128x4_avx512.h  aegis128x4_common.h  aegis128x4_soft.c  aegis128x4_soft.h  implementations.h
src/aegis/aegis256/: aegis256.c  aegis256_aesni.c  aegis256_aesni.h  aegis256_altivec.c  aegis256_altivec.h  aegis256_armcrypto.c  aegis256_armcrypto.h  aegis256_common.h  aegis256_soft.c  aegis256_soft.h  implementations.h
src/aegis/aegis256x2/: aegis256x2.c  aegis256x2_aesni.c  aegis256x2_aesni.h  aegis256x2_altivec.c  aegis256x2_altivec.h  aegis256x2_armcrypto.c  aegis256x2_armcrypto.h  aegis256x2_avx2.c  aegis256x2_avx2.h  aegis256x2_common.h  aegis256x2_soft.c  aegis256x2_soft.h  implementations.h
src/aegis/aegis256x4/: aegis256x4.c  aegis256x4_aesni.c  aegis256x4_aesni.h  aegis256x4_altivec.c  aegis256x4_altivec.h  aegis256x4_armcrypto.c  aegis256x4_armcrypto.h  aegis256x4_avx2.c  aegis256x4_avx2.h  aegis256x4_avx512.c  aegis256x4_avx512.h  aegis256x4_common.h  aegis256x4_soft.c  aegis256x4_soft.h  implementations.h
src/aegis/common/: aeshardware.h  common.c  common.h  cpu.c  cpu.h  func_names_define.h  func_names_undefine.h  func_table.h  softaes.c  softaes.h  type_names_undefine.h
src/aegis/include/: aegis.h  aegis128l.h  aegis128x2.h  aegis128x4.h  aegis256.h  aegis256x2.h  aegis256x4.h
src/argon2/: libargon2.c
src/argon2/include/: argon2.h
src/argon2/src/: argon2.c  core.c  core.h  encoding.c  encoding.h  ref.c  thread.c  thread.h
src/argon2/src/blake2/: blake2-impl.h  blake2b.c  blamka-round-ref.h
src/ascon/: aead.c  crypto_aead.h  crypto_hash.h  crypto_pbkdf2.h  hash.c  pbkdf2.c  prolog.h  round.h  round32.h  round64.h  word.h
test/: test3.sql  test4.sql
tests/: threadtest2.c  threadtest3.c  threadtest4.c
